fix align switch

--- a/src/index.scss
+++ b/src/index.scss
@@ -145,7 +145,7 @@ body {
 .common__txt {
   @apply text-center;
   width: 60%;
-  margin: 16px auto 25px auto;
+  margin: 16px auto 40px auto;
   line-height: 1.43;
   strong {
     color: var(--red);
